# usc-android

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
Audio/: CMakeLists.txt  stdafx.h
Audio/src/Unix/: AudioOutput_SDL.cpp
Beatmap/src/: KShootMap.cpp  MapDatabase.cpp
Graphics/: CMakeLists.txt  stdafx.h
Graphics/include/Graphics/: Window.hpp
Graphics/src/: Font.cpp  Gamepad_Impl.hpp  Image.cpp  Material.cpp  Mesh.cpp  OpenGL.cpp  Texture.cpp  Window.cpp
Main/: CMakeLists.txt  stdafx.h
Main/include/nuklear/: nuklear_sdl_gl3.h
Main/nuklear/: nuklear_sdl_gles2.h
Main/src/: Application.cpp  Background.cpp  CalibrationScreen.cpp  ChallengeSelect.cpp  DownloadScreen.cpp  Game.cpp  GameConfig.cpp  GameplaySettingsDialog.cpp  GuiUtils.cpp  Main.cpp  ScoreScreen.cpp  SettingsPage.cpp  SettingsScreen.cpp  SkinConfig.cpp  SongSelect.cpp  Track.cpp
Main/src/FastGUI/: FastGuiGame.cpp
Shared/: CMakeLists.txt
Shared/include/Shared/: Path.hpp
Shared/src/: Log.cpp  Path.cpp
Shared/src/Linux/: Thread.cpp
Shared/src/Unix/: File.cpp  Path.cpp
Tests.Shared/src/: TestFilesystem.cpp
Tests/src/: TestManager.cpp
